Removed aos animation

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
 
   <link rel="" href="">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="CodeNesters provides you the most demanding services in development." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
