--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="CodeNesters provides you the most demanding services in development." />
+  <meta name="google-site-verification" content="W21QfET5Miq_zf6m9iL5QzcGe_tmT0ei4DjuTlbwh_Y" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
