--- a/public/index.html
+++ b/public/index.html
@@ -25,49 +25,11 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>CodeNesters - Think | Code | Create | Deploy</title>
-
-  <style>
-    .loading {
-      -webkit-animation: sk-scaleout 1s infinite ease-in-out;
-      animation: sk-scaleout 1s infinite ease-in-out;
-      background-color: #124c62;
-      border-radius: 100%;
-      height: 6em;
-      width: 6em;
-    }
-
-    .loading-container {
-      align-items: center;
-      background-color: white;
-      display: flex;
-      height: 100vh;
-      justify-content: center;
-      width: 100vw;
-    }
-
-    @keyframes sk-scaleout {
-      0% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-      }
-
-      100% {
-        -webkit-transform: scale(1);
-        opacity: 0.5;
-        transform: scale(1);
-      }
-    }
-  </style>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root">
-    <div id="spinner" class="loading-container">
-      <div class="loading"></div>
-      <!-- <img src="applogo.gif" /> -->
-    </div>
-  </div>
+  <div id="root"></div>
 </body>
 
 </html>
