minor optimization | bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
   <link rel="" href="">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0 />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="CodeNesters provides you the most demanding services in development." />
   <meta name="google-site-verification" content="EPHfQNEXVaUUXz9_bokGbEnGQYnKlKR4Ifjwj1YqMpw" />
