Removed lazy loading for  hero section image

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="/public/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
+  <link rel="preload" fetchpriority="high" as="image" href="../src/assets/images/home/hero8.webp" type="image/webp">
 
   <link rel="" href="">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
