Added gtag | Configured helmet provider | Added some meta tags initially

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="/public/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
-  <link rel="preload" fetchpriority="high" as="image" href="../src/assets/images/home/hero8.webp" type="image/webp">
 
   <link rel="" href="">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
@@ -18,12 +17,24 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="CodeNesters provides you the most demanding services in development." />
   <meta name="google-site-verification" content="EPHfQNEXVaUUXz9_bokGbEnGQYnKlKR4Ifjwj1YqMpw" />
+  <meta name="robots" content="index, follow">
+  <meta name="copyright" content="Copyright © 2024 CodeNesters All Rights Reserved.">
+  <meta name="author" content="YashCodes">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true">
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <!--! Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NYCB3L7RLW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-NYCB3L7RLW');
+  </script>
 
   <title>CodeNesters - Think | Code | Create | Deploy</title>
 </head>
