added some meta tags in login page using helmet | Did some improvements on login page for seo

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,13 @@
   <link rel="icon" type="image/png" sizes="96x96" href="/public/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
 
-  <link rel="" href="">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="CodeNesters provides you the most demanding services in development." />
-  <meta name="google-site-verification" content="EPHfQNEXVaUUXz9_bokGbEnGQYnKlKR4Ifjwj1YqMpw" />
+  <meta name="description"
+    content="Best Software Company | The best software company in raipur engaged in creating the backbone of your online presence at extremely low cost" />
+  <meta name="keywords"
+    content="CodeNesters, CodeNesters.in, codenesters raipur, codenesters raipur, codenesters india, digital services, website development, web development, website, web app, seo, coding, coding courses" />
+  <meta name=" google-site-verification" content="EPHfQNEXVaUUXz9_bokGbEnGQYnKlKR4Ifjwj1YqMpw" />
   <meta name="robots" content="index, follow">
   <meta name="copyright" content="Copyright © 2024 CodeNesters All Rights Reserved.">
   <meta name="author" content="YashCodes">
