--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Best Software Company | The best software company in raipur engaged in creating the backbone of your online presence at extremely low cost" />
+    content="Best Software Company | The best software company in raipur engaged in creating the backbone of your online presence at extremely low cost"
+    data-rh="true" />
   <meta name="keywords"
-    content="CodeNesters, CodeNesters.in, codenesters raipur, codenesters raipur, codenesters india, digital services, website development, web development, website, web app, seo, coding, coding courses" />
+    content="CodeNesters, CodeNesters.in, codenesters raipur, codenesters raipur, codenesters india, digital services, website development, web development, website, web app, seo, coding, coding courses"
+    data-rh="true" />
   <meta name=" google-site-verification" content="EPHfQNEXVaUUXz9_bokGbEnGQYnKlKR4Ifjwj1YqMpw" />
   <meta name="robots" content="index, follow">
   <meta name="copyright" content="Copyright © 2024 CodeNesters All Rights Reserved.">
